# wxWidgets-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
include/: appmain.h  wxbasedef.h
rc/: appmain.xpm
src/: appmain.cpp
